Added boosts to Fishing chance depending on conditions. Also, the kraken, now with 100% more sound!

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ Version 1.4.06-dev
  + Added configurable cooldown and warmup times when using /ptp
  + Added a new Party item share category "Misc" which contains a list of configurable items. (By default all tools and armor)
  + Added fishing exploit prevention
+ + Added boosts to Fishing chance depending on conditions
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
