Add more localisation

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -328,6 +328,7 @@ Taming.Skillup=[[YELLOW]]Taming skill increased by {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Summoning complete
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
+Taming.Summon.Name.Format={0}\'s {1}
 
 #UNARMED
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
@@ -567,6 +568,11 @@ Party.ShareMode.Equal=EQUAL
 Party.ShareMode.Random=RANDOM
 Party.ExpShare.Disabled=[[RED]]Party experience sharing is disabled.
 Party.ItemShare.Disabled=[[RED]]Party item sharing is disabled.
+Party.ItemShare.Category.Loot=Loot
+Party.ItemShare.Category.Mining=Mining
+Party.ItemShare.Category.Herbalism=Herbalism
+Party.ItemShare.Category.Woodcutting=Woodcutting
+Party.ItemShare.Category.Misc=Misc
 
 ##xp
 Commands.XPGain.Acrobatics=Falling
@@ -631,7 +637,14 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 #ITEMS
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
+Item.ChimaeraWing.Name=Chimaera Wing
+Item.ChimaeraWing.Lore=[[GRAY]]Teleports you to your bed.
+Item.Generic.Wait=[[RED]]You need to wait before you can use this again! [[YELLOW]]({0}s)
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
+
+#TELEPORTATION
+Teleport.Commencing=[[GRAY]]Commencing teleport in [[GOLD]]({0}) [[GRAY]]seconds, please stand still...
+Teleport.Cancelled=[[DARK_RED]]Teleportation canceled!
 
 #SKILLS
 Skills.Child=[[GOLD]](CHILD SKILL)
@@ -641,6 +654,8 @@ Skills.NeedMore=[[DARK_RED]]You need more [[GRAY]]{0}
 Skills.Parents = PARENTS
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]You are too tired to use that ability again. [[YELLOW]]({0}s)
+Skills.Cancelled=[[RED]]{0} cancelled!
+Skills.ConfirmOrCancel=[[GREEN]]Right-click again to confirm [[GOLD]]{0} [[GREEN]]. Left-click to cancel.
 
 #STATISTICS
 Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
