--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,8 @@ Version 1.4.06-dev
  + Added a new Party item share category "Misc" which contains a list of configurable items. (By default all tools and armor)
  + Added fishing exploit prevention
  + Added boosts to Fishing chance depending on conditions
+ + Added McMMOAbilityActivateEvent and McMMOAbilityDeactivateEvent
+ + Added config options to toggle the size of fireworks
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
@@ -32,6 +34,7 @@ Version 1.4.06-dev
  = Fixed Smelting returning ink sacs instead of Lapis when double-dropping
  = Fixed bug where players could remain in party chat after leaving or being kicked from a party.
  = Fixed bug where non-player arrows couldn't be deflected.
+ = Fixed experience being applied even when the permission for a skill was denied
  ! Changed Berserk to add items to inventory rather than denying pickup
  ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
