--- a/Changelog.txt
+++ b/Changelog.txt
@@ -35,6 +35,7 @@ Version 1.4.06-dev
  = Fixed bug where players could remain in party chat after leaving or being kicked from a party.
  = Fixed bug where non-player arrows couldn't be deflected.
  = Fixed experience being applied even when the permission for a skill was denied
+ = Fixed possible item duplication bug with inifitity bows
  ! Changed Berserk to add items to inventory rather than denying pickup
  ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
