--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,7 @@ Version 1.4.06-dev
  + Added boosts to Fishing chance depending on conditions
  + Added McMMOAbilityActivateEvent and McMMOAbilityDeactivateEvent
  + Added config options to toggle the size of fireworks
+ + Added config option to multiply xp gains from mob spawner mobs
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
