List /party itemshare and /party expshare in /party ?
Closes #913

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -529,6 +529,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]{0} <passwo
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]{0} <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]{0} <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]{0}
+Party.Help.9=[[RED]]Use [[DARK_AQUA]]{0} [[RED]]to share items with party members
+Party.Help.10=[[RED]]Use [[DARK_AQUA]]{0} [[RED]]to enable XP sharing with party members
 Party.InformedOnJoin={0} [[GREEN]]has joined your party
 Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
