--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ Version 1.4.06-dev
  + Added config options to toggle the size of fireworks
  + Added config option to multiply xp gains from mob spawner mobs
  + Added multiplier to Archery XP based on bow force
+ + Added information about /party itemshare and /party expshare to the party help page
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
