--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,7 @@ Version 1.4.06-dev
  + Added config option to multiply xp gains from mob spawner mobs
  + Added multiplier to Archery XP based on bow force
  + Added information about /party itemshare and /party expshare to the party help page
+ + Added option to use scoreboards for power level display instead of Spout.
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
