Changed Spout notification tiers to be stored in SpoutConfig instead of AdvancedConfig. Also restructured some Spout stuff for easier readability.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -44,6 +44,7 @@ Version 1.4.06-dev
  = Fixed bug with removing players from mySQL database
  = Fixed bug with empty metadata lists and Smelting
  = Fixed bug where Blast Mining would drop wrong items
+ ! Changed Spout notification tiers to be stored in SpoutConfig instead of AdvancedConfig
  ! Changed Berserk to add items to inventory rather than denying pickup
  ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
