Update localization files.

--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -7,6 +7,7 @@ Acrobatics.Skillup=[[YELLOW]]Acrobatiek toegenomen met {0}. Totaal ({1})
 Archery.Effect.0=Ervaringsschot
 Archery.Effect.1=Neemt de schade van bogen toe
 Archery.Effect.2=Verdoven (Spelers)
+Archery.Effect.3=Verward tegenstanders en doet {0} schade
 Archery.Effect.5=Kans om pijlen te krijgen van lijken
 Archery.Listener=Boogschieten:
 Archery.SkillName=BOOGSCHIETEN
@@ -33,6 +34,8 @@ Fishing.ItemFound=[[GRAY]]Schat gevonden!
 Fishing.Listener=Vissen:
 Fishing.MagicFound=[[GRAY]]Jij voelt een vleugje magie met deze vangst...
 Herbalism.Ability.GTh=[[GREEN]]**GROEN DUIMPJE**
+Herbalism.Effect.10=Hylian Geluk
+Herbalism.Effect.11=Geeft een kleine kans om zeldzame voorwerpen te vinden
 Herbalism.Listener=Kruidenkunde:
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Jou [[YELLOW]]groene Vingers [[GREEN]]kracht is hersteld!
 Herbalism.Skills.GTe.Other.Off=[[RED]]Groene vingers[[GREEN]] is uitgewerkt voor [[YELLOW]]{0}
@@ -72,8 +75,11 @@ Swords.Combat.Bleeding=[[GREEN]]**VIJAND BLOED**
 Swords.Combat.Counter.Hit=[[DARK_RED]]Geraakt door een tegenaanval
 Swords.Combat.Countered=[[GREEN]]**TEGEN-AANVAL**
 Swords.Combat.SS.Struck=[[DARK_RED]]Geraakt door GEKARTELDE SLAG!
+Swords.Effect.1=Reflecteer {0} van de opgelopen schade
 Swords.Effect.2=Gekartelde Slag (Vermogen)
+Swords.Effect.3={0} DMG AoE, Bloeden+ AoE
 Swords.Effect.4=Gekartelde Slag Bloed+
+Swords.Effect.5={0} Tick Bloeden
 Swords.Effect.6=Bloeden
 Swords.Listener=Zwaarden:
 Swords.SkillName=ZWAARDEN
@@ -92,13 +98,15 @@ Taming.Effect.15=[[GRAY]]COTW (Wolf): Buk en linkermuisknop met {0} Botten in je
 Taming.Effect.16=Fast Food Service
 Taming.Effect.17=Kans voor wolven na een aanval te regeneren
 Taming.Listener.Wolf=[[DARK_GRAY]]Jouw wolf dribbelt terug naar je...
-Taming.Listener=Temming:
+Taming.Listener=Temmen:
 Taming.Skillup=[[YELLOW]]Temmings ervaring toegenomen met {0}. Totaal ({1})
 Taming.Summon.Complete=[[GREEN]]Oproepen voltooid
 Unarmed.Ability.Berserk.Length=[[RED]]Razernij Lengte: [[YELLOW]]{0}s
 Unarmed.Effect.0=Razernij (KRACHT)
 Unarmed.Effect.6=Pijlen afweren
 Unarmed.Effect.7=Pijlen afweren
+Unarmed.Effect.8=Ijzeren Grip
+Unarmed.Effect.9=Voorkomt dat je ontwapend wordt
 Unarmed.Listener=Ongewapend:
 Unarmed.Skills.Berserk.Off=[[RED]]**Razernij is uitgewerkt**
 Unarmed.Skills.Berserk.On=[[GREEN]]**RAZERNIJ GEACTIVEERD**
@@ -133,6 +141,8 @@ Commands.Invite.Accepted=[[GREEN]]Uitnodiging geacepteerd. Jij hebt de groep  {0
 Commands.mcgod=[[RED]]- GodModus Schakelen
 Commands.mcrank.Player=[[RED]]DOELWIT: [[WHITE]]{0}
 Commands.mmoedit=[player] <Kracht> <Nieuwe waarde> [[RED]] - Pas doel aan
+Commands.mmoedit.Modified.1=[[GREEN]]Uw level in {0} is veranderd naar {1}
+Commands.mmoedit.Modified.2=[[RED]]{0} is aangepast voor {1}.
 Commands.mmoupdate.Start=[[GRAY]]Beginnen met converteren...
 Commands.ModDescription=[[RED]]- Lees instructie mod beschrijving
 Commands.NoConsole=Deze commando wordt niet ondersteund vanuit de console.
@@ -164,7 +174,7 @@ Commands.Usage.PartyName=naam
 Commands.Usage.Password=wachtwoord
 Commands.Usage.XP=xp
 mcMMO.NoSkillNote=[[DARK_GRAY]]als je geen toegang hebt tot een vermogen, wordt die hier niet getoont
-Party.Forbidden=[mcMMO] Groepen niet toegestaan op deze wereld (zie Machtigingen)
+Party.Forbidden=[mcMMO] Groepen zijn niet toegestaan in deze wereld (zie Machtigingen)
 Party.InformedOnQuit={0} [[GREEN]]heeft de groep verlaten
 Party.InvalidName=[[DARK_RED]]Dat is geen geldige groep\'s naam.
 Party.IsLocked=[[RED]]Deze groep is al gesloten!
@@ -188,6 +198,7 @@ Party.Teleport.Dead=[RED]Je kan niet naar een dode speler teleporteren.
 Party.Teleport.Hurt=[[RED]]Je hebt schade opgelopen in de afgelopen {0} seconden en je kan niet teleporten.
 Party.Teleport.Target=[[GREEN]]{0} is naar jou toe gedeporteerd.
 Party.Teleport.Disabled=[[RED]]{0} staat groeps-teleportaties niet toe.
+Party.Rename.Same=[[RED]]Dat is al de naam van uw groep!
 Party.Join.Self=[[RED]]Je kan niet meedoen met jezelf!
 Party.Unlocked=[[GRAY]]Groep is ontgrendeld
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
@@ -220,6 +231,7 @@ Guides.Axes=Guide coming soon...
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Guides.Header=[[GOLD]]-=[[GREEN]]{0} Handleiding[[GOLD]]=-
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
+Guides.Page.OutOfRange=Deze pagina bestaat niet, er zijn in totaal {0} pagina\'s.
 Inspect.OfflineStats=mcMMO statistieken voor offline-speler [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Statistieken voor [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Jij bent te ver weg om deze speler te inspecteren!
@@ -235,5 +247,7 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Stats
 Perks.lucky.name=Geluk
 Perks.lucky.bonus=[[GOLD]] ({0} met Geluks Perk)
 Perks.activationtime.name=Uithoudingsvermogen
+Smelting.Listener=Smelten:
+Commands.Description.ptp=Teleport naar een groepslid
 UpdateChecker.outdated=U gebruikt een verouderde versie van mcMMO!
 UpdateChecker.newavailable=Er is een nieuwe versie beschikbaar op BukkitDev.
