--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -1,72 +1,165 @@
 Acrobatics.Combat.Proc=[[GREEN]]**Esquivou**
 Acrobatics.Effect.0=Rolar
 Acrobatics.Effect.4=Esquivou
+Acrobatics.Listener=Acrobacias:
 Acrobatics.Roll.Text=**Rolou**
-Acrobatics.SkillName=ACROBACIA
+Acrobatics.SkillName=Acrobacia
 Acrobatics.Skillup=[[AMARELO]]Habilidade Acrobacia aumentada em {0}. Total ({1})
+Archery.Effect.0=Tiro Habilidoso
+Archery.Effect.1=Aumenta o dano feito com arcos
+Archery.Effect.5=Chance de recuperar flechas dos corpos
 Archery.Listener=Arqueiro
 Archery.SkillName=ARQUEIRO
 Archery.Skillup=[[AMARELO]]Habilidade Arqueiro aumentada em {0}. Total ({1})
 Axes.Ability.Bonus.0=Machado
+Axes.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SEU MACHADO**
+Axes.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SEU MACHADO**
+Axes.Combat.GI.Struck=[[RED]]**GOLPEADO POR UM GRANDE IMPACTO**
+Axes.Effect.3=Dano Duplo
+Axes.Effect.5=Adiciona dano extra
+Axes.Listener=Machados:
 Axes.SkillName=Machado
+Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Racha Cranios!
+Axes.Skillup=[[AMARELO]]Habilidade Machado aumentada em {0}. Total ({1})
+Excavation.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA P\u00c1**
+Excavation.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA P\u00c1**
 Excavation.Effect.3=Habilidade de cavar tesouros
+Excavation.Listener=Escava\u00e7\u00e3o:
 Excavation.SkillName=Escava\u00e7\u00e3o
+Excavation.Skillup=[[AMARELO]]Habilidade Escava\u00e7\u00e3o aumentada em {0}. Total ({1})
 Fishing.ItemFound=[[GRAY]]Tesouro encontrado!
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=PESCARIA
+Herbalism.Ability.GTh=[[GREEN]]**DED\u00c3O VERDE**
+Herbalism.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ENXADA**
+Herbalism.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA ENXADA**
 Herbalism.Listener=Herbalismo
 Herbalism.SkillName=HERBALISMO
-Mining.Ability.Ready=[[VERDE]]**VOC\u00ca PREPARA A SUA PICARETA**
+Herbalism.Skills.GTe.Other.Off=[[RED]]Terra Verde[[GREEN]] acabou para o [[YELLOW]]{0}
+Mining.Ability.Length=[[RED]]Super Partir Duracao: [[YELLOW]]{0}s
+Mining.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA PICARETA**
+Mining.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA PICARETA**
+Mining.Listener=Minera\u00e7\u00e3o:
 Mining.SkillName=MINERAR
+Mining.Skills.SuperBreaker.Refresh=[[GREEN]]A tua [[YELLOW]]abilidade Super Partir [[GREEN]]esta pronta!
 Mining.Skillup=[[YELLOW]]Habilidade Minerar aumentada em {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
+Mining.Blast.Refresh=[[GREEN]]A tua [[YELLOW]]abilidade de explosao [[GREEN]]esta pronta!
+Repair.Effect.0=Reparar
+Repair.Effect.4=Super Reparo
+Repair.Effect.6=Reparar Diamante ({0}+ SKILL)
+Repair.Effect.7=Reparar ferramentas e armadura de Diamante
+Repair.Effect.9=Reparar itens m\u00e1gicos
+Repair.Listener=Reparar:
+Repair.SkillName=REPARAR
+Repair.Skills.AdeptDiamond=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Diamante.
 Repair.Skills.AdeptGold=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Ouro.
+Repair.Skills.AdeptStone=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Pedra.
+Repair.Skills.FeltEasy=[[GRAY]]Isso pareceu f\u00e1cil.
+Repair.Skillup=[[YELLOW]]Habilidade Reparar aumentada em {0}. Total ({1})
+Repair.Arcane.Chance.Success=[[GRAY]]AF Percentagem de Sucesso: [[YELLOW]]{0}%
 Repair.Arcane.Fail=[[VERMELHO]]Poder misterioso saiu permanentemente do item.
+Repair.Arcane.Lost=[[RED]]Voc\u00ea n\u00e3o foi habilidoso o suficiente para manter os encantamentos.
+Swords.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ESPADA**
+Swords.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA ESPADA**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]O sangramento[[GREEN]]parou[[GRAY]]!
+Swords.Combat.Bleeding=[[GREEN]]**INIMIGO A SANGRAR**
+Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
 Swords.Effect.0=Contra-ataque
 Swords.Effect.6=Sangrou
+Swords.Listener=Espadas:
 Swords.SkillName=Espada
+Swords.Skills.SS.On=[[GREEN]]**ATAQUE DE SERRA ACTIVADO**
+Taming.Ability.Bonus.1=Lobos evitam o perigo
+Taming.Ability.Bonus.6=Garras Afiadas
+Taming.Effect.11=Redu\u00e7\u00e3o de dano explosivo
+Taming.Effect.12=Chamado da Selva
+Taming.Effect.13=Invoca um animal ao seu lado
+Taming.Effect.17=Chance dos lobos se curarem ao atacarem
+Taming.Effect.4=Garras Afiadas
+Taming.Effect.5=Dano B\u00f4nus
+Taming.Listener.Wolf=[[DARK_GRAY]]O seu lobo correu de volta \u00e0 voc\u00ea...
 Taming.Listener=Domar
 Taming.SkillName=DOMAR
+Taming.Skillup=[[YELLOW]]Habilidade Domesticar aumentada em {0}. Total ({1})
+Unarmed.Listener=Desarmado:
 Unarmed.SkillName=DESARMAR
+Unarmed.Skills.Berserk.Off=[[RED]]**Berserk acabou**
+Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Berserk!
+Woodcutting.Ability.0=Soprador de Folhas
+Woodcutting.Ability.1=Soprar Folhas
+Woodcutting.Effect.1=Faz \u00e1rvores explodirem.
+Woodcutting.Effect.4=Drops duplos
 Woodcutting.Listener=Lenhador
 Woodcutting.SkillName=Lenhador
+Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Corta Arvores[[GREEN]] acabou para o [[YELLOW]]{0}
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]SEU MACHADO QUEBRA EM DEZENAS DE PEDA\u00c7OS!
+Woodcutting.Skills.TreeFellerThreshold=[[RED]]Essa \u00e1rvore \u00e9 muito grande!
 Ability.Generic.Template=[[VERMELHO]]{0}:[[AMARELO]]{1}
 Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
-Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE FERAS*
+Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE ANIMAIS*
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.BeastLoreOwner=[[DARK_AQUA]]Dono ([[RED]]{0}[[DARK_AQUA]])
 Combat.Gore=[[GREEN]]*MORDIDA*
 Combat.StruckByGore=[[RED]]*ATINGIDO POR MORDIDA*
 Combat.TargetDazed=Alvo foi [[DARK_RED]]Atordoado
 Combat.TouchedFuzzy=[[DARK_RED]]Visao turva. Sente Tonturas.
+Commands.AdminChat.Off=Chat Admin [[RED]]Desligado
+Commands.AdminChat.On=Chat de Admin [[GREEN]]Ligado
+Commands.Disabled=[[RED]]Este comando est\u00e1 desabilitado.
 Commands.DoesNotExist=[[RED]]Player n\u00e3o existe na database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Modo God desabilitado
+Commands.Invite.Accepted=[[GREEN]]Convite aceito. Voc\u00ea se juntou ao grupo {0}
+Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modifica alvo
+Commands.ModDescription=[[RED]]- Leia a descri\u00e7\u00e3o breve do mod
 Commands.NoConsole=Esse comando n\u00e3o suporta uso no console
-Commands.Party.Kick=[[RED]]Voc\u00ea foi kickado da party {0}!
+Commands.Party.Accept=[[RED]]- Aceitar convite de grupo
+Commands.Party.Chat.Off=Chat de grupo [[RED]]Desligado
+Commands.Party.Commands=[[GREEN]]--COMANDOS DE GRUPO--
+Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Voc\u00ea recebeu um convite para o grupo {0} de {1}
+Commands.Party.Kick=[[RED]]Voc\u00ea foi kickado do grupo {0}!
+Commands.Party.Leave=[[RED]]Voc\u00ea saiu do grupo
+Commands.Party.None=[[RED]]Voc\u00ea n\u00e3o est\u00e1 em um grupo.
+Commands.Party.Quit=[[RED]]- Deixe seu grupo atual
+Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Nivel de Poder [[YELLOW]]Podium--
+Commands.PowerLevel=[[DARK_RED]]N\u00cdVEL DE PODER: [[GREEN]]{0}
 Commands.Stats.Self=SEUS STATS
+mcMMO.NoPermission=[[DARK_RED]]Permiss\u00f5es insuficientes.
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
+Party.InvalidName=[[DARK_RED]]Isto n\u00e3o \u00e9 um nome v\u00e1lido.
 Party.Locked=[[RED]]Equipe est\u00e1 bloqueada, s\u00f3 o l\u00edder pode convidar.
 Party.NotInYourParty=[[DARK_RED]]{0} nao est\u00e1 na sua equipe
 Party.Password.Set=[[GREEN]]Senha da equipe: {0}
+Party.Player.Invalid=[[RED]]Isto n\u00e3o \u00e9 um jogador v\u00e1lido.
+Party.Teleport.Dead=[[RED]]Voc\u00ea n\u00e3o pode teleportar para um jogador morto.
+Party.Teleport.Player=[[GREEN]]Voc\u00ea teleportou para {0}.
+Party.Teleport.Target=[[GREEN]]{0} teleportou-se para voc\u00ea.
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Commands.XPGain.Acrobatics=CAINDO
+Commands.XPGain.Archery=Atacando Monstros
+Commands.XPGain.Axes=Atacando Monstros
 Commands.XPGain.Excavation=Cavando e achando tesouros
 Commands.XPGain.Herbalism=Colhendo Ervas
 Commands.XPGain.Mining=Minerar Pedra & Min\u00e9rio
+Commands.XPGain.Swords=Atacando Monstros
 Commands.XPGain.Taming=Domesticar animais, ou combater com os seus lobos
 Commands.XPGain=[[DARK_GRAY]]XP ADQUIRIDO: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
 Commands.xprate.over=[[RED]]Evento de XP Rate acabou!!
-XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+XPRate.Event=[[GOLD]]mcMMO est\u00e1 em um evento de XP aumentada! O aumento de XP \u00e9 {0}x!
+Effects.Effects=EFEITOS
 Guides.Axes=Guide coming soon...
 Guides.Excavation=[[DARK_AQUA]] Sobre escava\u00e7\u00e3o:.. \\ N [[YELLOW]] Escava\u00e7\u00e3o \u00e9 o ato de cavar terra para encontrar tesouros \\ n [[YELLOW]] Por escavando a terra que voc\u00ea vai encontrar tesouros \\ n [[YELLOW]] Quanto mais voc\u00ea fizer isso mais os tesouros que voc\u00ea pode encontrar \\ n \\ n [[DARK_AQUA]] gANHO XP:. \\ n [[YELLOW]] Para ganhar XP neste habilidade que voc\u00ea tem que cavar com uma p\u00e1 na m\u00e3o \\ n [[. YELLOW]] Apenas certos materiais pode ser desenterrado para tesouros e XP \\ n [[DARK_AQUA]] Materiais compat\u00edveis:. \\ n [[YELLOW]] grama, terra, areia, argila, cascalho, Mic\u00e9lio, Areia Alma \\ n \\ n [[DARK_AQUA]] Como usar Broca Giga Breaker: \\ n [[YELLOW]] com uma p\u00e1 na m\u00e3o direita clique para pronta sua ferramenta \\ n [[YELLOW]] uma vez neste estado tem cerca de 4 segundos para fazer \\. n [[YELLOW]] contato com materiais de escava\u00e7\u00e3o compat\u00edveis esta \\ n [[YELLOW]] ativar disjuntor Broca Giga. \\ n [[DARK_AQUA]] O que \u00e9 o Giga disjuntor broca? \\ n [[YELLOW]] Disjuntor Broca Giga \u00e9 uma habilidade com um cooldown \\ n [[YELLOW]] ligada \u00e0 habilidade de escava\u00e7\u00e3o. Triplica sua chance \\ n [[YELLOW]] de encontrar tesouros e permite quebra instant\u00e2nea \\ n [[YELLOW]] em materiais de escava\u00e7\u00e3o. \\ N \\ n [[DARK_AQUA]] Como Treasure Hunter trabalho? \\ N [[] YELLOW ] Cada tesouro poss\u00edvel para escava\u00e7\u00e3o tem a sua pr\u00f3pria \\ n [[YELLOW]] exig\u00eancia de n\u00edvel de habilidade para a sua queda, como resultado, \u00e9 \\ n [[YELLOW]] dif\u00edcil dizer o quanto ele est\u00e1 ajudando voc\u00ea. \\ n [[YELLOW ]] Basta ter em mente que a habilidade maior escava\u00e7\u00e3o sua \\ n [[YELLOW]] \u00e9, os mais tesouros que podem ser encontrados. \\ n [[YELLOW]] E tamb\u00e9m ter em mente que cada tipo de escava\u00e7\u00e3o \\ n [[YELLOW]] material compat\u00edvel tem sua pr\u00f3pria lista \u00fanica de tesouros. \\ n [[YELLOW]] em outras palavras, voc\u00ea vai encontrar tesouros diferentes na sujeira \\ n [[YELLOW]] do que voc\u00ea em cascalho. \\ n [[DARK_AQUA]] notas sobre a escava\u00e7\u00e3o: \\ n [[YELLOW]] gotas de escava\u00e7\u00e3o s\u00e3o completamente customizeable \\ n [[YELLOW]] Ent\u00e3o, os resultados variam de servidor para servidor.\n
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
 Inspect.OfflineStats=mcMMO Statsde player offline[[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Item.ChimaeraWing.Fail=**ASAS DE QUIMERA FALHARAM!**
+Item.ChimaeraWing.Pass=**ASAS DE QUIMERA**
+Item.Injured.Wait=Voc\u00ea foi ferido recentemente e deve esperar para usar isto. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]Voc\u00ea foi Desarmado!
 Skills.NeedMore=[[DARK_RED]]Voc\u00ea precisa de mais
 Skills.TooTired=[[RED]]Voc\u00ea est\u00e1 cansado pra usar essa habilidade.
 Stats.Header.Combat=[[GOLD]]-=SKILLS DE COMBATE=-
+Stats.Header.Gathering=[[GOLD]]-=SKILLS DE RECOLHA=-
